# stream-fitter

./: .gitignore  Cargo.toml  README.md
stream-fitter/: Cargo.toml
stream-fitter-cli/: Cargo.toml
stream-fitter-cli/src/: main.rs
stream-fitter/src/: errors.rs  lib.rs  pipe_fitter.rs
stream-fitter/src/clients/: client.rs  discord.rs  mod.rs  twitch.rs
