[package]
name = "stream-fitter"
version = "0.1.0"
authors = ["Zachary Deschaux <zachary.deschaux@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"

[dependencies.tokio]
version = "1.5"
features = ["macros", "rt-multi-thread"]
